se agrega las colas de envio y respuesta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=9999
 spring.activemq.broker-url=tcp://104.45.187.37:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
-jms.queue.destination=cola.cinefilos
+jms.cola.envio=cola.cinefilos.envio
+jms.cola.respuesta=cola.cinefilos.respuesta
 
 spring.datasource.url = jdbc:mysql://db4free.net:3306/cinefilos?useSSL=false
 spring.datasource.username = bryanaliaga
